# friend_game

./: Cargo.toml
src/: gamestate.rs  main.rs
src/common/: mod.rs
src/common/networking/: mod.rs  type_registry.rs
src/menu/: mod.rs
src/shooting/: mod.rs
src/strategy/: mod.rs
