[package]
name = "friend_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy-trait-query = "0.5.1"
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive", "alloc", "rc", "std"] }
steamworks = "0.11.0"
wgpu = "22.1.0"
bevy_rapier3d = { version = "0.26.0", features = ["serde-serialize", "parallel", "enhanced-determinism"] } # makes use of enhanced-determinism for multiplayer
